--- a/viewer/GenViewer_vl_sdi_vc9.vcproj
+++ b/viewer/GenViewer_vl_sdi_vc9.vcproj
@@ -83,7 +83,7 @@
 				OutputFile="$(OutDir)/GenViewer.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;$(VL)\vlCore\lib\Debug&quot;;&quot;$(VL)\vlGraphics\lib\Debug&quot;;&quot;$(VL)\vlWin32\lib\Debug&quot;;&quot;$(VL)\vlMFC\lib\Debug&quot;;&quot;$(VL)\examples\Applets\lib\Debug&quot;;&quot;%(AdditionalLibraryDirectories)&quot;;&quot;$(CSP)/lib/vc90&quot;;&quot;$(XERCES)\lib&quot;;&quot;$(SolutionDir)lib\$(ConfigurationName)&quot;;..\bin\Debug_sdi_vc9"
+				AdditionalLibraryDirectories="&quot;$(VL)\vlCore\lib\Debug&quot;;&quot;$(VL)\vlGraphics\lib\Debug&quot;;&quot;$(VL)\vlWin32\lib\Debug&quot;;&quot;$(VL)\vlMFC\lib\Debug&quot;;&quot;$(VL)\examples\Applets\lib\Debug&quot;;&quot;%(AdditionalLibraryDirectories)&quot;;&quot;$(CSP)/lib/vc90&quot;;&quot;$(XERCES)\lib&quot;;&quot;$(SolutionDir)lib\$(ConfigurationName)&quot;"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(TargetDir)$(TargetName).pdb"
 				SubSystem="2"
@@ -182,7 +182,7 @@
 				OutputFile="$(OutDir)/GenViewer.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;$(VL)\vlCore\lib\Release&quot;;&quot;$(VL)\vlGraphics\lib\Release&quot;;&quot;$(VL)\vlWin32\lib\Release&quot;;&quot;$(VL)\vlMFC\lib\Release&quot;;&quot;$(VL)\examples\Applets\lib\Release&quot;;&quot;%(AdditionalLibraryDirectories)&quot;;&quot;$(CSP)/lib/vc90&quot;;&quot;$(XERCES)\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(VL)\vlCore\lib\Release&quot;;&quot;$(VL)\vlGraphics\lib\Release&quot;;&quot;$(VL)\vlWin32\lib\Release&quot;;&quot;$(VL)\vlMFC\lib\Release&quot;;&quot;$(VL)\examples\Applets\lib\Release&quot;;&quot;%(AdditionalLibraryDirectories)&quot;;&quot;$(CSP)/lib/vc90&quot;;&quot;$(XERCES)\lib&quot;;&quot;$(SolutionDir)lib\$(ConfigurationName)&quot;"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
