--- a/viewer/GenViewer_sdi.rc
+++ b/viewer/GenViewer_sdi.rc
@@ -58,15 +58,17 @@ BEGIN
     BUTTON      IDR_PANE_MODEL
     BUTTON      IDR_PANE_VIEW
     BUTTON      IDR_PANE_ANNO
-    BUTTON      ID_ORBIT_OPT
-    BUTTON      ID_PAN_OPT
-    BUTTON      ID_ZOOM_OPT
+    SEPARATOR
     BUTTON      ID_ZOOM_TO_EXTENTS
-    BUTTON      ID_ZOOM_TO_WINDOW
     SEPARATOR
     BUTTON      ID_VIEW_PERSPECTIVE
     SEPARATOR
     BUTTON      ID_APP_ABOUT
+    SEPARATOR
+    BUTTON      ID_ORBIT_OPT
+    BUTTON      ID_PAN_OPT
+    BUTTON      ID_ZOOM_TO_WINDOW
+    BUTTON      ID_ZOOM_OPT
 END
 
 IDR_VIEW_RENDER_BAR TOOLBAR  16, 15
